Add header, hero

--- a/index.html
+++ b/index.html
@@ -103,6 +103,96 @@
     <link rel="stylesheet" href="./assets/css/styles.css" />
   </head>
   <body>
-    
+    <!-- ===== Header ===== -->
+    <header class="header">
+      <div class="container row">
+        <img src="./assets/img/logo.svg" alt="Besnik." class="logo" />
+        <nav class="navbar">
+          <ul>
+            <li>
+              <a href="/" class="link active" title="Home">Home</a>
+            </li>
+            <li>
+              <a href="#!" class="link" title="Features">Features</a>
+            </li>
+            <li>
+              <a href="#!" class="link" title="Pricing">Pricing</a>
+            </li>
+            <li>
+              <a href="#!" class="link" title="About">About</a>
+            </li>
+            <li>
+              <a href="#!" class="link" title="Contact">Contact</a>
+            </li>
+          </ul>
+        </nav>
+        <div class="action">
+          <a href="#!">Sign in</a>
+          <a href="#!" class="sign-up-btn">Sign up</a>
+        </div>
+      </div>
+    </header>
+
+    <main>
+      <!-- ===== Hero ===== -->
+      <div class="hero">
+        <div class="container">
+          <div class="row">
+            <div class="hero-content">
+              <p class="sub-title">&#128526; EASY LEARNING PLATFORM</p>
+              <h1 class="title">Words learner come here.</h1>
+              <p class="desc">
+                Build skills with courses, certificates, and get online
+                knowledge from our <br />world-class platform.
+              </p>
+              <div class="action">
+                <a href="#!" class="btn">Get Started</a>
+                <a href="#!" class="watch-btn">
+                  <img src="./assets/img/watch-icon.svg" alt="" />
+                </a>
+              </div>
+            </div>
+            <div class="hero-media">
+              <div class="courses row">
+                <div></div>
+                <div class="title">
+                  <p>Courses</p>
+                  <p>1000+</p>
+                </div>
+              </div>
+              <div class="schedules">
+                <p class="title">Schedules</p>
+                <div class="bar"></div>
+                <div class="bar"></div>
+                <div class="bar"></div>
+                <div class="bar"></div>
+              </div>
+              <div class="students">
+                <p class="title">Our Active Students</p>
+                <div class="avatar-list row">
+                  <img
+                    src="./assets/img/avatar-1.jpg"
+                    alt=""
+                    class="avatar"
+                  /><img
+                    src="./assets/img/avatar-2.jpg"
+                    alt=""
+                    class="avatar"
+                  /><img
+                    src="./assets/img/avatar-3.jpg"
+                    alt=""
+                    class="avatar"
+                  /><img
+                    src="./assets/img/avatar-4.jpg"
+                    alt=""
+                    class="avatar"
+                  /><span class="avatar">10K+</span>
+                </div>
+              </div>
+            </div>
+          </div>
+        </div>
+      </div>
+    </main>
   </body>
 </html>
