--- a/index.html
+++ b/index.html
@@ -193,6 +193,119 @@
           </div>
         </div>
       </div>
+
+      <!-- ===== Features ===== -->
+      <div class="features">
+        <div class="container">
+          <div class="features-info">
+            <p class="sub-title">FEATURES</p>
+            <h2 class="title">
+              We are providing suitable features for students.
+            </h2>
+            <p class="desc">
+              Read our awesome feature that is absolutely suit for you. Explore
+              the feature and know the best.
+            </p>
+          </div>
+
+          <div class="features-list row">
+            <div class="item">
+              <img
+                src="./assets/img/live-class.svg"
+                alt="Live Class"
+                class="icon"
+              />
+              <h3 class="title">Live Class</h3>
+              <p class="desc">
+                We are providing live classes with the best teacher for you
+              </p>
+            </div>
+            <div class="item">
+              <img src="./assets/img/discuss.svg" alt="Discuss" class="icon" />
+              <h3 class="title">Discuss</h3>
+              <p class="desc">
+                Conversation with teachers or another students about task or any
+                other thing
+              </p>
+            </div>
+            <div class="item">
+              <img src="./assets/img/task.svg" alt="" class="icon" />
+              <h3 class="title">Task</h3>
+              <p class="desc">
+                We give every of our students task for gathering knowledge at
+                home
+              </p>
+            </div>
+          </div>
+        </div>
+      </div>
+
+      <!-- ===== Courses ===== -->
+      <div class="courses">
+        <div class="container">
+          <div class="courses-info">
+            <p class="sub-title">COURSES</p>
+            <h2 class="title">Popular Courses</h2>
+            <div class="row">
+              <p class="desc">
+                Check out our most poular courses that suit for you. Here you
+                can find your favourite one.
+              </p>
+              <a href="#!" class="link">View All Courses</a>
+            </div>
+          </div>
+          <div class="courses-list row">
+            <div class="courses-item">
+              <a href="#!" class="img-block">
+                <img src="./assets/img/courses-1.jpg" alt="Web Design" />
+              </a>
+              <div class="info">
+                <h3 class="title"><a href="#!">Web Design</a></h3>
+                <p class="price">Fee <b>$200</b></p>
+                <p class="desc">Web design basic to higher level</p>
+                <div class="row">
+                  <span class="dot"></span>
+                  <p class="classes">40 Classes</p>
+                  <span class="dot"></span>
+                  <p class="time">3 Months</p>
+                </div>
+              </div>
+            </div>
+            <div class="courses-item">
+              <a href="#!" class="img-block">
+                <img src="./assets/img/courses-2.jpg" alt="Web Design" />
+              </a>
+              <div class="info">
+                <h3 class="title"><a href="#!">Web Development</a></h3>
+                <p class="price">Fee <b>$250</b></p>
+                <p class="desc">Web development basic to higher level</p>
+                <div class="row">
+                  <span class="dot"></span>
+                  <p class="classes">30 Classes</p>
+                  <span class="dot"></span>
+                  <p class="time">3 Months</p>
+                </div>
+              </div>
+            </div>
+            <div class="courses-item">
+              <a href="#!" class="img-block">
+                <img src="./assets/img/courses-3.jpg" alt="Web Design" />
+              </a>
+              <div class="info">
+                <h3 class="title"><a href="#!">UI/UX Design</a></h3>
+                <p class="price">Fee <b>$350</b></p>
+                <p class="desc">UI/UX design basic to higher level</p>
+                <div class="row">
+                  <span class="dot"></span>
+                  <p class="classes">50 Classes</p>
+                  <span class="dot"></span>
+                  <p class="time">4 Months</p>
+                </div>
+              </div>
+            </div>
+          </div>
+        </div>
+      </div>
     </main>
   </body>
 </html>
