--- a/index.html
+++ b/index.html
@@ -306,6 +306,24 @@
           </div>
         </div>
       </div>
+
+      <!-- ===== Countdown ===== -->
+      <div class="countdown">
+        <div class="container row">
+          <div class="item">
+            <p class="number">100+</p>
+            <p class="sub-title">Popular Courses</p>
+          </div>
+          <div class="item">
+            <p class="number">500+</p>
+            <p class="sub-title">Skilled Trainer</p>
+          </div>
+          <div class="item">
+            <p class="number">1M+</p>
+            <p class="sub-title">Student Learning</p>
+          </div>
+        </div>
+      </div>
     </main>
   </body>
 </html>
