--- a/index.html
+++ b/index.html
@@ -324,6 +324,100 @@
           </div>
         </div>
       </div>
+
+      <!-- ===== Feedback ===== -->
+      <div class="feedback">
+        <div class="container">
+          <div class="row">
+            <div class="feedback-info">
+              <div class="feedback-list">
+                <div class="item">
+                  <svg
+                    xmlns="http://www.w3.org/2000/svg"
+                    width="36"
+                    height="29"
+                    viewBox="0 0 36 29"
+                    fill="none"
+                  >
+                    <path
+                      d="M15 16.0322V28C15 28.5522 14.5523 29 14 29H1C0.447723 29 0 28.5522 0 28V15.0322C0 9.68282 2.37552 -0.406295 14.0734 0.0126507C14.5945 0.0312054 15 0.468461 15 0.989946L15 4.05464C15 4.60713 14.5504 5.04878 14.0047 5.13326C10.4517 5.68282 6.51944 9.07466 6.04715 14.0327C5.99478 14.5825 6.44769 15.0322 6.99997 15.0322H14C14.5523 15.0322 15 15.4797 15 16.0322Z"
+                      fill="#070707"
+                    />
+                    <path
+                      d="M36 16.0322V28C36 28.5522 35.5523 29 35 29H22C21.4477 29 21 28.5522 21 28V15.0322C21 9.68282 23.3755 -0.406295 35.0734 0.0126507C35.5945 0.0312054 36 0.468461 36 0.989946L36 4.05464C36 4.60713 35.5504 5.04878 35.0047 5.13326C31.4517 5.68282 27.5194 9.07466 27.0471 14.0327C26.9948 14.5825 27.4477 15.0322 28 15.0322H35C35.5523 15.0322 36 15.4797 36 16.0322Z"
+                      fill="#070707"
+                    />
+                  </svg>
+                  <p class="text">
+                    “They are the best people. And this is the suitable platform
+                    to learn from distance.”
+                  </p>
+                  <p class="person"><b>- Ben Foakes</b>, student.</p>
+                </div>
+                <div class="item">
+                  <svg
+                    xmlns="http://www.w3.org/2000/svg"
+                    width="36"
+                    height="29"
+                    viewBox="0 0 36 29"
+                    fill="none"
+                  >
+                    <path
+                      d="M15 16.0322V28C15 28.5522 14.5523 29 14 29H1C0.447723 29 0 28.5522 0 28V15.0322C0 9.68282 2.37552 -0.406295 14.0734 0.0126507C14.5945 0.0312054 15 0.468461 15 0.989946L15 4.05464C15 4.60713 14.5504 5.04878 14.0047 5.13326C10.4517 5.68282 6.51944 9.07466 6.04715 14.0327C5.99478 14.5825 6.44769 15.0322 6.99997 15.0322H14C14.5523 15.0322 15 15.4797 15 16.0322Z"
+                      fill="#070707"
+                    />
+                    <path
+                      d="M36 16.0322V28C36 28.5522 35.5523 29 35 29H22C21.4477 29 21 28.5522 21 28V15.0322C21 9.68282 23.3755 -0.406295 35.0734 0.0126507C35.5945 0.0312054 36 0.468461 36 0.989946L36 4.05464C36 4.60713 35.5504 5.04878 35.0047 5.13326C31.4517 5.68282 27.5194 9.07466 27.0471 14.0327C26.9948 14.5825 27.4477 15.0322 28 15.0322H35C35.5523 15.0322 36 15.4797 36 16.0322Z"
+                      fill="#070707"
+                    />
+                  </svg>
+                  <p class="text">
+                    “They are the best people. And this is the suitable platform
+                    to learn from distance.”
+                  </p>
+                  <p class="person"><b>- Ben Foakes</b>, student.</p>
+                </div>
+                <div class="item">
+                  <svg
+                    xmlns="http://www.w3.org/2000/svg"
+                    width="36"
+                    height="29"
+                    viewBox="0 0 36 29"
+                    fill="none"
+                  >
+                    <path
+                      d="M15 16.0322V28C15 28.5522 14.5523 29 14 29H1C0.447723 29 0 28.5522 0 28V15.0322C0 9.68282 2.37552 -0.406295 14.0734 0.0126507C14.5945 0.0312054 15 0.468461 15 0.989946L15 4.05464C15 4.60713 14.5504 5.04878 14.0047 5.13326C10.4517 5.68282 6.51944 9.07466 6.04715 14.0327C5.99478 14.5825 6.44769 15.0322 6.99997 15.0322H14C14.5523 15.0322 15 15.4797 15 16.0322Z"
+                      fill="#070707"
+                    />
+                    <path
+                      d="M36 16.0322V28C36 28.5522 35.5523 29 35 29H22C21.4477 29 21 28.5522 21 28V15.0322C21 9.68282 23.3755 -0.406295 35.0734 0.0126507C35.5945 0.0312054 36 0.468461 36 0.989946L36 4.05464C36 4.60713 35.5504 5.04878 35.0047 5.13326C31.4517 5.68282 27.5194 9.07466 27.0471 14.0327C26.9948 14.5825 27.4477 15.0322 28 15.0322H35C35.5523 15.0322 36 15.4797 36 16.0322Z"
+                      fill="#070707"
+                    />
+                  </svg>
+                  <p class="text">
+                    “They are the best people. And this is the suitable platform
+                    to learn from distance.”
+                  </p>
+                  <p class="person"><b>- Ben Foakes</b>, student.</p>
+                </div>
+              </div>
+              <div class="direction">
+                <button>&lt;</button>
+                <button>&gt;</button>
+              </div>
+            </div>
+
+            <div class="feedback-avatar">
+              <img src="./assets/img/avatar-1.jpg" alt="" class="avatar" />
+              <img src="./assets/img/avatar-2.jpg" alt="" class="avatar" />
+              <img src="./assets/img/avatar-3.jpg" alt="" class="avatar" />
+              <img src="./assets/img/avatar-4.jpg" alt="" class="avatar" />
+              <img src="./assets/img/avatar-5.jpg" alt="" class="avatar" />
+              <img src="./assets/img/avatar-6.jpg" alt="" class="avatar" />
+            </div>
+          </div>
+        </div>
+      </div>
     </main>
   </body>
 </html>
