Add CTA, footer

--- a/index.html
+++ b/index.html
@@ -106,7 +106,9 @@
     <!-- ===== Header ===== -->
     <header class="header">
       <div class="container row">
-        <img src="./assets/img/logo.svg" alt="Besnik." class="logo" />
+        <a href="/"
+          ><img src="./assets/img/logo.svg" alt="Besnik." class="logo"
+        /></a>
         <nav class="navbar">
           <ul>
             <li>
@@ -418,6 +420,103 @@
           </div>
         </div>
       </div>
+
+      <!-- ===== CTA ===== -->
+      <div class="cta">
+        <div class="container">
+          <div class="row">
+            <div class="cta-info">
+              <p class="title">Ready to Get Admit</p>
+              <p class="desc">Create your account and Boost your Career.</p>
+            </div>
+            <a href="#!" class="btn">Get Started</a>
+          </div>
+        </div>
+      </div>
     </main>
+
+    <!-- ===== Footer ===== -->
+    <footer class="footer">
+      <div class="container">
+        <div class="row">
+          <a href="/"
+            ><img src="./assets/img/logo.svg" alt="Besnik." class="logo"
+          /></a>
+          <div class="item">
+            <h3 class="title">Company</h3>
+            <ul>
+              <li>
+                <a href="#!">About</a>
+              </li>
+              <li>
+                <a href="#!">Careers</a>
+              </li>
+              <li>
+                <a href="#!">Press</a>
+              </li>
+            </ul>
+          </div>
+          <div class="item">
+            <h3 class="title">Community</h3>
+            <ul>
+              <li>
+                <a href="#!">Team Plans</a>
+              </li>
+              <li>
+                <a href="#!">Blog</a>
+              </li>
+              <li>
+                <a href="#!">Students</a>
+              </li>
+              <li>
+                <a href="#!">Schoolarships</a>
+              </li>
+            </ul>
+          </div>
+          <div class="item">
+            <h3 class="title">Teaching</h3>
+            <ul>
+              <li>
+                <a href="#!">Become a teacher</a>
+              </li>
+              <li>
+                <a href="#!">Teaching academy</a>
+              </li>
+            </ul>
+          </div>
+          <div class="item social">
+            <h3 class="title">Be social</h3>
+            <ul>
+              <li>
+                <a href="#!"
+                  ><i class="fa-brands fa-twitter"></i><span>Twitter</span></a
+                >
+              </li>
+              <li>
+                <a href="#!"
+                  ><i class="fa-brands fa-facebook-f"></i
+                  ><span>Facebook</span></a
+                >
+              </li>
+              <li>
+                <a href="#!"
+                  ><i class="fa-brands fa-instagram"></i
+                  ><span>Instagram</span></a
+                >
+              </li>
+              <li>
+                <a href="#!"
+                  ><i class="fa-brands fa-linkedin-in"></i
+                  ><span>Linkedin</span></a
+                >
+              </li>
+            </ul>
+          </div>
+        </div>
+        <p class="copyright">
+          &copy; Copyright 2020 by Mayad Ahmed. All right reserved.
+        </p>
+      </div>
+    </footer>
   </body>
 </html>
