--- a/index.html
+++ b/index.html
@@ -350,10 +350,10 @@
                       fill="#070707"
                     />
                   </svg>
-                  <p class="text">
+                  <blockquote class="text">
                     “They are the best people. And this is the suitable platform
                     to learn from distance.”
-                  </p>
+                  </blockquote>
                   <p class="person"><b>- Ben Foakes</b>, student.</p>
                 </div>
                 <div class="item">
@@ -373,10 +373,10 @@
                       fill="#070707"
                     />
                   </svg>
-                  <p class="text">
+                  <blockquote class="text">
                     “They are the best people. And this is the suitable platform
                     to learn from distance.”
-                  </p>
+                  </blockquote>
                   <p class="person"><b>- Ben Foakes</b>, student.</p>
                 </div>
                 <div class="item">
@@ -396,10 +396,10 @@
                       fill="#070707"
                     />
                   </svg>
-                  <p class="text">
+                  <blockquote class="text">
                     “They are the best people. And this is the suitable platform
                     to learn from distance.”
-                  </p>
+                  </blockquote>
                   <p class="person"><b>- Ben Foakes</b>, student.</p>
                 </div>
               </div>
