Fix link logo and button

--- a/index.html
+++ b/index.html
@@ -106,13 +106,15 @@
     <!-- ===== Header ===== -->
     <header class="header">
       <div class="container row">
-        <a href="/"
+        <a href="/f8-htmlcss-02_1"
           ><img src="./assets/img/logo.svg" alt="Besnik." class="logo"
         /></a>
         <nav class="navbar">
           <ul>
             <li>
-              <a href="/" class="link active" title="Home">Home</a>
+              <a href="/f8-htmlcss-02_1" class="link active" title="Home"
+                >Home</a
+              >
             </li>
             <li>
               <a href="#!" class="link" title="Features">Features</a>
@@ -404,8 +406,8 @@
                 </div>
               </div>
               <div class="direction">
-                <button>&lt;</button>
-                <button>&gt;</button>
+                <button><i class="fa-solid fa-chevron-left"></i></button>
+                <button><i class="fa-solid fa-chevron-right"></i></button>
               </div>
             </div>
 
@@ -439,7 +441,7 @@
     <footer class="footer">
       <div class="container">
         <div class="row">
-          <a href="/"
+          <a href="/f8-htmlcss-02_1"
             ><img src="./assets/img/logo.svg" alt="Besnik." class="logo"
           /></a>
           <div class="item">
